karl/views/static/tinymce/3.3.9.2/themes/advanced/skins/karl/ui.css
/* ... */
/* Separator */
.karlSkin .mceSeparator {display:block; background:url(../../img/icons.gif) -180px 0; width:2px; height:20px; margin:2px 2px 0 4px}

/* ListBox */
.karlSkin .mceListBox {direction:ltr}
.karlSkin .mceListBox, .karlSkin .mceListBox a {display:block}
.karlSkin .mceListBox .mceText {padding-left:4px; width:70px; text-align:left; border:1px solid #CCC; border-right:0; background:#FFF; font-family:Tahoma,Verdana,Arial,Helvetica; font-size:11px; height:20px; line-height:20px; overflow:hidden}
.karlSkin .mceListBox .mceOpen {width:9px; height:20px; background:url(../../img/icons.gif) -741px 0; margin-right:2px; border:1px solid #CCC;}
.karlSkin table.mceListBoxEnabled:hover .mceText, .karlSkin .mceListBoxHover .mceText, .karlSkin .mceListBoxSelected .mceText {border:1px solid #A2ABC0; border-right:0; background:#FFF}
.karlSkin table.mceListBoxEnabled:hover .mceOpen, .karlSkin .mceListBoxHover .mceOpen, .karlSkin .mceListBoxSelected .mceOpen {background-color:#FFF; border:1px solid #A2ABC0}
.karlSkin .mceListBoxDisabled a.mceText {color:gray; background-color:transparent;}
.karlSkin .mceListBoxMenu {overflow:auto; overflow-x:hidden}
.karlSkin .mceOldBoxModel .mceListBox .mceText {height:22px}
.karlSkin .mceOldBoxModel .mceListBox .mceOpen {width:11px; height:22px;}
.karlSkin select.mceNativeListBox {font-family:'MS Sans Serif',sans-serif,Verdana,Arial; font-size:7pt; background:#F0F0EE; border:1px solid gray; margin-right:2px;}

/* SplitButton */
.karlSkin .mceSplitButton {width:32px; height:20px; direction:ltr}
.karlSkin .mceSplitButton a, .karlSkin .mceSplitButton span {height:20px; display:block}
.karlSkin .mceSplitButton a.mceAction {width:20px; border:1px solid #F0F0EE; border-right:0;}
.karlSkin .mceSplitButton span.mceAction {width:20px; background:url(../../img/icons.gif) 20px 20px;}
.karlSkin .mceSplitButton a.mceOpen {width:9px; border:1px solid #F0F0EE;}
.karlSkin .mceSplitButton span.mceOpen {width:9px; background:url(../../img/icons.gif) -741px 0;}
.karlSkin table.mceSplitButtonEnabled:hover a.mceAction, .karlSkin .mceSplitButtonHover a.mceAction, .karlSkin .mceSplitButtonSelected a.mceAction {border:1px solid #0A246A; border-right:0; background-color:#B2BBD0}
.karlSkin table.mceSplitButtonEnabled:hover a.mceOpen, .karlSkin .mceSplitButtonHover a.mceOpen, .karlSkin .mceSplitButtonSelected a.mceOpen {border:1px solid #0A246A;}
.karlSkin table.mceSplitButtonEnabled:hover span.mceOpen, .karlSkin .mceSplitButtonHover span.mceOpen, .karlSkin .mceSplitButtonSelected span.mceOpen {background-color:#B2BBD0}
.karlSkin .mceSplitButtonDisabled .mceAction, .karlSkin .mceSplitButtonDisabled span.mceOpen {opacity:0.3; filter:alpha(opacity=30)}
.karlSkin .mceSplitButtonActive a.mceAction {border:1px solid #0A246A; background-color:#C2CBE0}
.karlSkin .mceSplitButtonActive a.mceOpen {border-left:0;}

/* ColorSplitButton */
.karlSkin div.mceColorSplitMenu table {background:#FFF; border:1px solid gray}
.karlSkin .mceColorSplitMenu td {padding:2px}
.karlSkin .mceColorSplitMenu a {display:block; width:9px; height:9px; overflow:hidden; border:1px solid #808080}
.karlSkin .mceColorSplitMenu td.mceMoreColors {padding:1px 3px 1px 1px}
.karlSkin .mceColorSplitMenu a.mceMoreColors {width:100%; height:auto; text-align:center; font-family:Tahoma,Verdana,Arial,Helvetica; font-size:11px; line-height:20px; border:1px solid #FFF}
.karlSkin .mceColorSplitMenu a.mceMoreColors:hover {border:1px solid #0A246A; background-color:#B6BDD2}
.karlSkin a.mceMoreColors:hover {border:1px solid #0A246A}
.karlSkin .mceColorPreview {margin-left:2px; width:16px; height:4px; overflow:hidden; background:#9a9b9a}
.karlSkin .mce_forecolor span.mceAction, .karlSkin .mce_backcolor span.mceAction {overflow:hidden; height:16px}

/* Menu */
.karlSkin .mceMenu {position:absolute; left:0; top:0; z-index:1000; border:1px solid #D4D0C8}
.karlSkin .mceNoIcons span.mceIcon {width:0;}
.karlSkin .mceNoIcons a .mceText {padding-left:10px}
.karlSkin .mceMenu table {background:#FFF}
.karlSkin .mceMenu a, .karlSkin .mceMenu span, .karlSkin .mceMenu {display:block}
.karlSkin .mceMenu td {height:20px}
.karlSkin .mceMenu a {position:relative;padding:3px 0 4px 0}
.karlSkin .mceMenu .mceText {position:relative; display:block; font-family:Tahoma,Verdana,Arial,Helvetica; color:#000; cursor:default; margin:0; padding:0 25px 0 25px; display:block}
.karlSkin .mceMenu span.mceText, .karlSkin .mceMenu .mcePreview {font-size:11px}
.karlSkin .mceMenu pre.mceText {font-family:Monospace}
.karlSkin .mceMenu .mceIcon {position:absolute; top:0; left:0; width:22px;}
.karlSkin .mceMenu .mceMenuItemEnabled a:hover, .karlSkin .mceMenu .mceMenuItemActive {background-color:#dbecf3}
.karlSkin td.mceMenuItemSeparator {background:#DDD; height:1px}
.karlSkin .mceMenuItemTitle a {border:0; background:#EEE; border-bottom:1px solid #DDD}
.karlSkin .mceMenuItemTitle span.mceText {color:#000; font-weight:bold; padding-left:4px}
.karlSkin .mceMenuItemDisabled .mceText {color:#888}
.karlSkin .mceMenuItemSelected .mceIcon {background:url(img/menu_check.gif)}
.karlSkin .mceNoIcons .mceMenuItemSelected a {background:url(img/menu_arrow.gif) no-repeat -6px center}
.karlSkin .mceMenu span.mceMenuLine {display:none}
.karlSkin .mceMenuItemSub a {background:url(img/menu_arrow.gif) no-repeat top right;}

/* Progress,Resize */
.karlSkin .mceBlocker {position:absolute; left:0; top:0; z-index:1000; opacity:0.5; filter:alpha(opacity=50); background:#FFF}
.karlSkin .mceProgress {position:absolute; left:0; top:0; z-index:1001; background:url(img/progress.gif) no-repeat; width:32px; height:32px; margin:-16px 0 0 -16px}
.karlSkin .mcePlaceHolder {border:1px dotted gray}

/* Formats */
.karlSkin .mce_formatPreview a {font-size:10px}
.karlSkin .mce_p span.mceText {}
.karlSkin .mce_address span.mceText {font-style:italic}
.karlSkin .mce_pre span.mceText {font-family:monospace}
.karlSkin .mce_h1 span.mceText {font-weight:bolder; font-size: 2em}
/* ... */

